ajuste del logo

--- a/juegos.html
+++ b/juegos.html
@@ -11,7 +11,7 @@
     
 
 <header>
-    <img src="logo.png" alt="Logo" class="logo">
+    <div class="logo"></div>
     <h1>Juegos</h1>
    
 </header>
