--- a/detalle.html
+++ b/detalle.html
@@ -12,7 +12,7 @@
     
 
 <header>
-    <img src="logo.png" alt="Logo" class="logo">
+    <div class="logo"></div>
     <h1>Destacados</h1>
     
 </header>
