empece la pagina de juegos añadiendo al menos los juegos, por otra parte en el css añadi con la herramienta display tarjetas en las cuales  aparecen las imagenes de cada juego, con un breve resumen de cada juego

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <li><a href="contacto.html">Contacto</a></li>
     </ul>
 </nav>
+<!-- Pagina de bienvenida con breve resumen de lo que se encontrara en la pagina y tambien una pequeña explicacion de lo que 
+ es la mitologia griega y sus componentes mas importantes -->
  <h1 class="Inicio">Bienvenido </h1>
     <p class="Inicio">
         La mitología griega ha inspirado innumerables videojuegos modernos.  
@@ -44,8 +46,9 @@
     <p class="Inicio">La mitología griega es el vasto conjunto de mitos, relatos y leyendas de la antigua Grecia, que formaban parte de
          su religión y se utilizaban para explicar el origen del mundo, los fenómenos naturales, la existencia humana y 
          los valores culturales</p>
-    <video width="600" height="400" controls loop src="video.mp4" poster="logo.png" type="video/mp4"></video>
+    <video width="600" height="400" controls loop src="recursos/video.mp4" poster="recursos/logo.png" type="video/mp4"></video>
 
+        <!-- tablas de información sobre la mitologia griega -->
          <table>
         <h2 class="Inicio">Características y Dioses de la Mitología Griega</h2>
         
@@ -105,5 +108,5 @@
                     dios de la música y la profecía, Artemisa de la caza.</td>
             </tr>
         </table>
-    
+    <footer><b>©copyright</b> Ivan Trinidad Freire</footer>
 </html>
