se termino el el apartado de juegos y detalles

--- a/detalle.html
+++ b/detalle.html
@@ -24,6 +24,20 @@
         <li><a href="contacto.html">Contacto</a></li>
     </ul>
 </nav>
+<p class="Detalles">En esta pagina encontraras los juegos mas destacados de la lista elejida</p>
+<section id="image-gallery" class="juegos-grid">
+        <div class="img-juegos" id="god-of-war">
+            <h3><b><u>God of War ☆</u></b></h3>
+            <p>Narra la historia de Kratos, el antiguo dios griego de la guerra, quien tras vengarse de los dioses olímpicos, se retira a tierras nórdicas, vive con su hijo Atreus, y debe aprender a ser padre y controlar su ira, embarcándose en un viaje para esparcir las cenizas de su esposa, lo que desencadena conflictos con los dioses nórdicos mientras forja un vínculo con su hijo y descubre verdades sobre su pasado. </p>
+            <a href="index.html">Mas info (DESTACADO)</a>
+            
+        </div>
+          <div class="img-juegos" id="Hades">
+            <h3><b><u>Hades ☆</u></b></h3>
+            <p>Juego roguelike de acción y mitología griega donde controlas a Zagreus, el hijo del dios Hades, en su misión por escapar del Inframundo. Cada intento de huida implica luchar a través de habitaciones aleatorias con enemigos, obteniendo bendiciones de los dioses olímpicos (Zeus, Atenea, etc.) que te dan poderes temporales para volverte más fuerte.</p>
+            <a href="index.html">Mas info (DESTACADO)</a>
+        </div>
+        </section>
 </body>
-<footer><b>©copyright</b> Ivan Trinidad Freire</footer>
+<footer><b>© Copyright</b> Ivan Trinidad Freire</footer>
 </html>
