--- a/index.html
+++ b/index.html
@@ -108,5 +108,5 @@
                     dios de la música y la profecía, Artemisa de la caza.</td>
             </tr>
         </table>
-    <footer><b>©copyright</b> Ivan Trinidad Freire</footer>
+    <footer><b>© Copyright</b> Ivan Trinidad Freire</footer>
 </html>
