--- a/contacto.html
+++ b/contacto.html
@@ -24,5 +24,5 @@
     </ul>
 </nav>
 </body>
-<footer><b>©copyright</b> Ivan Trinidad Freire</footer>
+<footer><b>© Copyright</b> Ivan Trinidad Freire</footer>
 </html>
